--- a/css/styles.css
+++ b/css/styles.css
@@ -505,7 +505,8 @@ img {
     width: 100%;
     height: 100%;
     z-index: 100;
-    transition: opacity var(--transition);
+    transition: opacity var(--transition), 
+    visibility var(--transition);
     background-color: rgba(46, 47, 66, 0.4);
 }
 
@@ -521,10 +522,14 @@ img {
     left: 50%;
     transform: translate(-50%,-46.7%);
     width: 408px;
-    height: 584px;
+    min-height: 584px;
     padding: 72px 24px 24px;
     background-color: #FCFCFC;
     border-radius: 4px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 
+                0px 1px 3px rgba(0, 0, 0, 0.12), 
+                0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform var(--transition);
 
 }
 
@@ -538,16 +543,23 @@ img {
     width: 24px;
     height: 24px;
     border-radius: 50% 50%;
+    padding: 0;
+    cursor: pointer;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    transition: background-color var(--transition);
+    transition: background-color var(--transition), 
+    border var(--transition);
+
+    background-color: #e7e9fc;
 }
 
 .close-button:hover,
 .close-button:focus {
-    background-color: var(--ocean-color);
+    background-color: #404bbf;
+    border: none;
 }
 
 .close-button-icon {
+    
     fill: var(--navy-color);
     transition: fill var(--transition);
 
@@ -555,7 +567,7 @@ img {
 
 .close-button:hover .close-button-icon,
 .close-button:focus .close-button-icon {
-     fill: var(--white-color);
+     fill: #ffffff;
 }
 
 .form-par {
@@ -566,7 +578,7 @@ img {
         text-align: center;
         margin-bottom: 16px;
 
-        color: var(--navy-color);
+        color: #2E2F42;
 }
 
 .form-modal {
@@ -574,33 +586,42 @@ img {
     flex-direction: column;
 }
 
-.form-label {
-    position: relative;
-    display: flex;
-    flex-direction: column;
+.form-div {
     margin-bottom: 8px;
-  
 }
 
-.form-span{
+.form-label {
+    position: relative;
+    display: block;
+    
+
     font-size: 12px;
     font-weight: 400;
-    line-height: 1.16;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     text-align: left;
     margin-bottom: 4px;
     
     color: #8E8F99;
+   
+  
+}
+
+.div-input-form {
+    position: relative;
+    margin-bottom: 8px;
 }
 
 
 .modal-form-input {
-    
+    width: 100%;
     font-size: 18px;
     height: 40px;
-    border: 1px solid #2E2F4266;
+    border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     padding-left: 38px;
+    background-color: transparent;
+    outline: transparent;
     transition: border-color var(--transition);
 }
 
@@ -612,8 +633,9 @@ img {
 
 .input-svg {
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 16px;
+    transform: translateY(-50%);
     transition: fill var(--transition);
     fill: var(--navy-color);
 }
@@ -623,24 +645,41 @@ img {
     fill: var(--iris-color);
 }
 
+.div-input-coment {
+    margin-bottom: 16px;
+}
+
 .modal-form-message {
-    font-size: 14px;
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     padding: 8px 16px;
-    border: 1px solid #2E2F4266;
+    border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
-    min-height: 120px;
+    outline: transparent;
     resize: none;
+    transition: border-color var(--transition);
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
     
 }
 
 .modal-form-message:hover,
 .modal-form-message:focus {
-outline: none;
+
 border-color: var(--iris-color);
 }
 
-.form-label-comment {
-    margin-bottom: 16px;
+.modal-form-check:checked + .modal-form-check-desc > .span-form-check {
+    background-color: var(--ocean-color);
+    border: none;
+    fill: #F4F4FD;
+}
+
+.div-checkbox {
+    margin-bottom: 24px;
 }
 
 .modal-form-check {
@@ -650,33 +689,33 @@ border-color: var(--iris-color);
 }
 
 .modal-form-check-desc {
-        display: flex;
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 1.33;
-        letter-spacing: 0.04em;
-        margin-bottom: 24px;
-
-        color: #8E8F99;
+      font-size: 12px;
+      line-height: 1.17;
+      letter-spacing: 0.04em;
+        
+      color: #8E8F99;
 }
 
 .privacy-policy {
     color: var(--iris-color);
 }
 
-.modal-form-check-desc::before {
-    content: "";
-    display: block;
+.span-form-check {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     width: 16px;
     height: 16px;
-    border: 1px solid #2E2F4266;
+    border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 2px;
-    cursor: pointer;
-    margin-right: 8px;
-    text-align: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: transparent;
 }
 
-.modal-form-check:focus + .modal-form-check-desc::before {
+
+/* .modal-form-check:focus + .modal-form-check-desc::before {
      border-color: var(--iris-color);
 }
     
@@ -686,10 +725,10 @@ border-color: var(--iris-color);
     background-repeat: no-repeat;
     background-position: 50% 50%;   
     background-color: var(--ocean-color);
-}
+} */
 
-.label-footer {
-}
+
+
 
 .imput-footer {
     font-size: 12px;
